# android_packages_modules_Virtualization

./: .gitignore  Android.bp  OWNERS  PREUPLOAD.cfg  README.md  TEST_MAPPING  avf_flags.aconfig  rustfmt.toml
.prebuilt_info/: prebuilt_info_pvmfw_pvmfw_img.asciipb
apex/: Android.bp  AndroidManifest.xml  canned_fs_config  canned_fs_config_sys_nice  manifest.json  prepare_device_vfio.sh  product_packages.mk  replace_bytes.py  sign_virt_apex.py  sign_virt_apex_test.sh  vfio_handler.rc  virtualizationservice.rc  virtualizationservice.rc.base  virtualizationservice.rc.llpvm  virtualizationservice.rc.ra  virtualizationservice.xml  virtualizationservice_attestation_enabled.rc  vmnic.rc
apkdmverity/: Android.bp  TEST_MAPPING  apkdmverity.rc
apkverify/: Android.bp  Cargo.toml
apkverify/src/: bytes_ext.rs  lib.rs  sigutil.rs  testing.rs  v3.rs  ziputil.rs
apkverify/tests/: apkverify_test.rs
apkverify/tests/data/: README.md
apkverity/: Android.bp  Cargo.toml
authfs/: Android.bp  TEST_MAPPING
avmd/: Android.bp  README.md  TEST_MAPPING
binder_common/: Android.bp  lazy_service.rs  lib.rs  rpc_client.rs  rpc_server.rs
compos/: Android.bp  payload_config.json
compositediskconfig/: Android.bp
demo/: Android.bp  AndroidManifest.xml  README.md
demo_native/: Android.bp  README.md  main.cpp
docs/: abl.md  custom_vm.md  device_assignment.md  getting_started.md  hugepages.md  updatable_vm.md  vm_remote_attestation.md
encryptedstore/: Android.bp  README.md  TEST_MAPPING
idsig/: Android.bp  Cargo.toml
java/: Android.bp
javalib/: Android.bp  README.md  (+3 more)
(+1058 files in other folders)
