[package]
name = "apkverify"
version = "0.1.0"
authors = ["Jooyung Han <jooyung@google.com>"]
edition = "2018"

[dependencies]
anyhow = { path = "../../../../external/rust/crates/anyhow" }
bytes = { path = "../../../../external/rust/crates/bytes" }
byteorder = { path = "../../../../external/rust/crates/byteorder" }
zip = { version = "0.5", path = "../../../../external/rust/crates/zip" }
